@@ -75,7 +75,6 @@ while (count - first) < 10000:
 		print("No Groups enabled for backfill")
 		sys.exit()
 
-	print(datas[0])
 	#get first, last from nntp sever
 	time.sleep(0.01)
 	s = nntplib.connect(conf['NNTP_SERVER'], conf['NNTP_PORT'], conf['NNTP_SSLENABLED'], conf['NNTP_USERNAME'], conf['NNTP_PASSWORD'])
@@ -83,9 +82,16 @@ while (count - first) < 10000:
 	try:
 		resp, count, first, last, name = s.group(datas[0])
 		time.sleep(0.1)
-	except nntplib.NNTPError():
-		sys.exit()
+	except nntplib.NNTPError:
+		cur.execute("update groups set backfill = 0 where name = %s" % (mdb.escape_string(datas[0])))
+		con.autocommit(True)
+		print("%s not found, disabling." %(datas[0]))
 	resp = s.quit()
+
+	if (datas[1] - first) < 0:
+		cur.execute("update groups set backfill = 0 where name = %s" % (mdb.escape_string(datas[0])))
+		con.autocommit(True)
+		print("%s has invalid first_post, disabling." %(datas[0]))
 
 	if name:
 		print("Group %s has %s articles, in the range %s to %s" % (name, "{:,}".format(int(count)), "{:,}".format(int(first)), "{:,}".format(int(last))))
@@ -93,7 +99,7 @@ while (count - first) < 10000:
 		print("Available Posts: %s" % ("{:,}".format(datas[1] - first)))
 		count = datas[1]
 
-		if (datas[1] - first) < 10000:
+		if (datas[1] - first) < 10000 and (datas[1] - first) > 0:
 			group = ("%s 10000" % (datas[0]))
 			subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/backfill_safe.php", ""+str(group)])
 			cur.close()
