@@ -235,19 +235,4 @@ class nameCleaning
 
 		return $cleanerName;
 	}
-
-	public function fixerPre($subject)
-	{
-		$cleanerName = $subject;
-		if (preg_match('/-\[ (?P<name>.*) \] ?-/', $subject, $matches))
-			$cleanerName = $matches['name'];
-		elseif (preg_match('/\[\d*\]-\[.*\]-\[.*\]-\[ ?(?P<name>.*) ?\] ?-/', $subject, $matches))
-			$cleanerName = $matches['name'];
-		elseif (preg_match('/[^\[]\D[\w\d\.]{10,}[^\]]| \D[\w\d\.]{10,}[^\]]/', $subject, $matches))
-			$cleanerName = $matches[0];
-		elseif (preg_match('/tt\d{7}/', $subject, $matches))
-			$cleanerName = $matches[0];
-
-		return $cleanerName;
-	}
 }
